@@ -57,6 +57,8 @@ Houdini:
   from tab menus.
 - Added methods to store parent name and visibility of native SOPs to
   @b openvdb_houdini::OpenVDBOpFactory.
+- Added a @b houdini_utils::OpFactory::setDefaultShape() method to allow a
+  default operator shape to be defined.
 
 
 @htmlonly <a name="v6_1_0_changes"></a>@endhtmlonly
